# liboceanography

./: .gitignore  .hgignore  .travis.yml  AUTHORS  CHANGES  CMakeLists.txt  README
docs/: Makefile  changes.rst  conf.py  function_reference.rst  getting_started.rst  index.rst  licensing.rst
src/: CMakeLists.txt  oceanography.c  oceanography.h
tests/: CMakeLists.txt  check_oceanography.c  test_oceanography.c
